tests/NormalTests/paczka1/fuzzy1/42338470.err
Error in line 2: S217 A574 36,7
Error in line 12: JSajxA A827 42,8
Error in line 26: olt5d S217 78,35
Error in line 25: olt5d A39 12,7
Error in line 28: olt5d S217 58,9
Error in line 21: VoE55Pgvvl S217 54,2
Error in line 19: JSajxA A574 37,6
